--- a/newsletter/awtomesion.ipynb
+++ b/newsletter/awtomesion.ipynb
@@ -34,11 +34,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "id": "HprzUzb3AVnU"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mJupyter cannot be started. Error attempting to locate jupyter: Running cells with 'Python 3.8.9 64-bit' requires jupyter and notebook package.\n",
+      "Run the following command to install 'jupyter and notebook' into the Python environment. \n",
+      "Command: '/usr/bin/python3 -m pip install jupyter notebook -U'"
+     ]
+    }
+   ],
    "source": [
     "template = open(\"Main Article Template.docx\",\"r\")"
    ]
@@ -47,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://medium.com/@pushkarkadam1994/automation-create-folder-structures-using-python-fc7b3a53b95e"
+    "Reference: https://medium.com/@pushkarkadam1994/automation-create-folder-structures-using-python-fc7b3a53b95e"
    ]
   },
   {
@@ -128,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.9"
   }
  },
  "nbformat": 4,
